Add VM args.